# github-pokemon-collection

./: .flake8  .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
docs/: README_kr.md
migrations/: env.py
migrations/scripts/: 0003_give_awards_for_hard_reset.py
migrations/versions/: 09eaf098922d_0007_add_index_to_foreign_keys.py  2f4a1e34bb23_0003_pokemon_column_update.py  355bcc98cde5_0002_add_is_shiny_field.py  375bfff70c14_0006_cascade_foreignkeys.py  55c59ee23158_0004_add_bag_item_pokedex_item_table.py  7c311b657452_0001_init_tables.py  d08ddf4152ff_0005_add_daily_item_table.py
scripts/: build-and-run-images.sh  fetch-sprites.sh
scripts/helpers/: fetch_pokeball_sprite.py  fetch_pokemon_sprites.py  get_pokemon_background_color.py
src/: db.py  main.py  setting.py  utils.py
src/auths/: jwt.py  oauth_client.py
src/dependencies/: auths.py  commons.py  db.py  external.py  externals.py  facades.py  renders.py  repositories.py  services.py  users.py
src/exceptions/: base.py  common.py  error_codes.py  external.py  handler.py  user.py
src/models/: bag_item.py  base.py  commit_point.py  daily_item.py  daily_item_abtain.py  item.py  pokedex_item.py  pokemon.py  pokemon_type.py  user.py
src/pokemons/: evolution.py  form.py  gender.py  item.py  item_effect.py  item_type.py  pokemon_type.py  time.py
src/renders/: backgrounds.py  images.py  item_sprites.py  (+5 more)
static/: preview.html
templates/: github-api-contribution-years.graphql  github-api-contributions-by-year.graphql
tests/: conftest.py  db.py
(+56 files in other folders)
